# deposit_app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: admin.py  models.py  serializers.py  service.py  tests.py  urls.py  views.py
deposit/: asgi.py  settings.py  urls.py  wsgi.py
